2003-03-28  Andreas Kupries  <andreask@activestate.com>

	* README: Updated information about acceptable documentation
	  formats, i.e. added doctools, made it mst prefered format. This
	  fixes the [Bug #685270], reported by Larry Virden
	  <lvirden@users.sourceforge.net>.

2003-03-24  Andreas Kupries  <andreask@activestate.com>

	* README: Updated to refer to the SF website for Tcllib. Thanks to
	  Larry Virden <lvirden@users.sourceforge.net> for the report and
	  fix. [Bug #707607].

2003-03-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/ntp: New module ntp created for time related network
	protocol stuff. Added RFC868 (TIME) protocol client and example.

2003-03-13  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in (install-libraries): Extended special code for
	  doctools to install the new idx and toc engines.

2003-02-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* modules/des: Imported and tcllib-ised the DES package
	from wiki page "DES in Tcl" by Jochen Loewer. NOT added to the
	main package list as it requires CBC/CFB/OFB modes for real use.

2003-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* More doctools changes: Command [strong] is deprecated now. Added
	  the command [copyright]. Went through all manpages to eliminate
	  [strong]. Partial setting of copyright information, where known.

2003-01-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mkInstallScripts.tcl: 
	* Makefile.in (install-libraries): Added module specific
	  installation code.

	  doctools: Install message catalogs and predefined formatting
	  engines.

	  textutil: Install hyphenation files.

	* Module doctools rewritten to make it a true package +
	  application, instead of a pure application module. This means
	  that this module now truly installs some functionality useable
	  by other applications and packages.

2003-01-03  Pat Thoyts <patthoyts@users.sourceforge.net>
