@@ -1,3 +1,7 @@
+2003-04-01  Andreas Kupries  <andreask@activestate.com>
+
+	* Makefile.in (MODULES): Added the soundex module.
+
 2003-03-28  Andreas Kupries  <andreask@activestate.com>
 
 	* README: Updated information about acceptable documentation
